--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <section class="intro">
             <h2>Agent ID Card</h2>
             <div id="loading" class="loading-spinner" style="display: none;"></div>
-            <img id="agentImage" alt="Agent ID Card" class="responsive-image" src="./Purple and Blue Modern Zumba Classes Promotion Instagram Post_20250704_203834_0000">
+            <img id="agentImage" alt="Agent ID Card" class="responsive-image" src="./Housekeeping-Employee-ID-Card-Template-edit-online.webp">
         </section>
     </main>
 
