--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.nbu.paisa.merchant&hl=en_IN"><i class="fa-brands fa-google-pay"></i></a>
             <a href="https://maps.app.goo.gl/ddXk7RZqA4D6afXd8"><i class="fa-solid fa-location-dot"></i></a>
             <a href="qrverify.html"><i class="fa-solid fa-qrcode"></i></a>
+            <a href="https://wa.me/919748437602"><i class="fa-solid fa-whatsapp-dot"></i></a>
         </div>
     </footer>
 
