--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <a href="https://maps.app.goo.gl/ddXk7RZqA4D6afXd8"><i class="fa-solid fa-location-dot"></i></a>
             <a href="qrverify.html"><i class="fa-solid fa-qrcode"></i></a>
             <a href="https://wa.me/919748437602"><i class="fab fa-whatsapp"></i>
-            <a href="<a href="tel:+919748437602">Call me</a>
+            <a href="<a href="tel:+919748437602">Phone</a>
         </div>
     </footer>
 
