--- a/qrverify.html
+++ b/qrverify.html
@@ -11,7 +11,10 @@
     <meta property="og:image" content="images/gpayBlogo.png">
     <meta property="og:type" content="website">
 
-    <!-- CSS -->
+    <!-- script -->
+    <link rel="stylesheet" href="script/styles.script">
+    <link rel="stylesheet" href="script/qr-styles.script">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.script">
 </head>
 
 <body>
