--- a/qrverify.html
+++ b/qrverify.html
@@ -11,10 +11,10 @@
     <meta property="og:image" content="images/gpayBlogo.png">
     <meta property="og:type" content="website">
 
-    <!-- script -->
-    <link rel="stylesheet" href="script/styles.script">
-    <link rel="stylesheet" href="script/qr-styles.script">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.script">
+    <!-- CSS -->
+    <link rel="stylesheet" href="CSS/styles.CSS">
+    <link rel="stylesheet" href="CSS/qr-styles.CSS">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.CSS">
 </head>
 
 <body>
