--- a/qrverify.html
+++ b/qrverify.html
@@ -11,10 +11,11 @@
     <meta property="og:image" content="images/gpayBlogo.png">
     <meta property="og:type" content="website">
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="CSS/styles.CSS">
-    <link rel="stylesheet" href="CSS/qr-styles.CSS">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.CSS">
+    <!-- script -->
+    <title>QRVerify Camera Scanner</title>
+    <script src="https://unpkg.com/html5-qrcode"></script>
+    <link rel="stylesheet" href="css/qr-styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.script">
 </head>
 
 <body>
