--- a/qrverify.html
+++ b/qrverify.html
@@ -11,11 +11,10 @@
     <meta property="og:image" content="images/gpayBlogo.png">
     <meta property="og:type" content="website">
 
-    <!-- script -->
-    <title>QRVerify Camera Scanner</title>
-    <script src="https://unpkg.com/html5-qrcode"></script>
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/qr-styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.script">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
