--- a/qrverify.html
+++ b/qrverify.html
@@ -12,9 +12,9 @@
     <meta property="og:type" content="website">
 
     <!-- CSS -->
+    <script src="https://unpkg.com/html5-qrcode"></script>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/qr-styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
