--- a/qrverify.html
+++ b/qrverify.html
@@ -103,10 +103,10 @@
     <!-- Footer Section -->
     <footer class="footer">
         Want To Become A Google Pay Agent?
-        <p><a href="https://forms.gle/Re2bfButfPrmNuCP8">Apply Now</a></p>
+        <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSeQUFdPCJ_eZhN2EnRldTDpz8d6dU-qRVAFhWCqSvqFxfzXOg/viewform">Apply Now</a></p>
         <div class="social-icons">
             <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.nbu.paisa.merchant&hl=en_IN"><i class="fa-brands fa-google-pay"></i></a>
-            <a href="#"><i class="fa-solid fa-location-dot"></i></a>
+            <a href=https://maps.app.goo.gl/ddXk7RZqA4D6afXd8 fa-location-dot"></i></a>
             <a href="index.html"><i class="fa-solid fa-home"></i></a>
         </div>
     </footer>
