--- a/qrverify.html
+++ b/qrverify.html
@@ -106,7 +106,7 @@
         <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSeQUFdPCJ_eZhN2EnRldTDpz8d6dU-qRVAFhWCqSvqFxfzXOg/viewform">Apply Now</a></p>
         <div class="social-icons">
             <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.nbu.paisa.merchant&hl=en_IN"><i class="fa-brands fa-google-pay"></i></a>
-            <a href=https://maps.app.goo.gl/ddXk7RZqA4D6afXd8 fa-location-dot"></i></a>
+            <a href=https://maps.app.goo.gl/ddXk7RZqA4D6afXd8"><i fa-location-dot"></i></a>
             <a href="index.html"><i class="fa-solid fa-home"></i></a>
         </div>
     </footer>
