--- a/qrverify.html
+++ b/qrverify.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,9 +12,9 @@
     <meta property="og:type" content="website">
 
     <!-- CSS -->
-    <script src="https://unpkg.com/html5-qrcode"></script>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/qr-styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
@@ -115,6 +114,5 @@
     <!-- JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
     <script src="js/qr-script.js"></script>
-
 </body>
 </html> 
