--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                     const link = document.createElement('a');
                     link.download = 'agent-qr-code.png';
                     link.href = canvas.toDataURL();
-                    link.click();
+                    link.click<img src="https://api.qrserver.com/v1/create-qr-code/?data=HelloWorld&size=200x200" alt="QR Code">
                 }
             };
         }
