--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 if (canvas) {
                     const link = document.createElement('a');
                     link.download = 'agent-qr-code.png';
-                    link.href = canvas.toDataURL();
+                    link.href = canvas.toDataURL<img src="https://api.qrserver.com/v1/create-qr-code/?data=HelloWorld&size=200x200" alt="QR Code">;
                     link.click<img src="https://api.qrserver.com/v1/create-qr-code/?data=HelloWorld&size=200x200" alt="QR Code">
                 }
             };
