--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         }
         
         function setupDownload(qrDataString) {
-            document.getElementById('downloadQR').onclick = function() {
+            document.getElementById('downloadQR').onclick = function<img src="https://api.qrserver.com/v1/create-qr-code/?data=HelloWorld&size=200x200" alt="QR Code"> {
                 const canvas = document.querySelector('#qrCode canvas');
                 if (canvas) {
                     const link = document.createElement('a');
