--- a/index.html
+++ b/index.html
@@ -259,10 +259,33 @@
             document.getElementById('downloadQR').onclick = function<img src="https://api.qrserver.com/v1/create-qr-code/?data=HelloWorld&size=200x200" alt="QR Code"> {
                 const canvas = document.querySelector('#qrCode canvas');
                 if (canvas) {
-                    const link = document.createElement('a');
-                    link.download = 'agent-qr-code.png';
-                    link.href = canvas.toDataURL<img src="https://api.qrserver.com/v1/create-qr-code/?data=HelloWorld&size=200x200" alt="QR Code">;
-                    link.click<img src="https://api.qrserver.com/v1/create-qr-code/?data=HelloWorld&size=200x200" alt="QR Code">
+                  <!DOCTYPE html>
+<html>
+<head>
+  <title>QR Code Generator</title>
+  <style>
+    body { text-align: center; font-family: Arial; }
+    input { padding: 10px; width: 200px; }
+    button { padding: 10px; margin: 10px; }
+    img { margin-top: 20px; }
+  </style>
+</head>
+<body>
+  <h2>QR Code Generator</h2>
+  <input type="text" id="qrInput" placeholder="Enter text or URL">
+  <button onclick="generateQR()">Generate QR</button>
+  <div id="qrOutput"></div>
+
+  <script>
+    function generateQR() {
+      const input = document.getElementById("qrInput").value;
+      const url = `https://api.qrserver.com/v1/create-qr-code/?data=${encodeURIComponent(input)}&size=200x200`;
+      document.getElementById("qrOutput").innerHTML = `<img src="${url}" alt="QR Code">`;
+    }
+  </script>
+</body>
+</html>
+
                 }
             };
         }
