--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <a href="https://maps.app.goo.gl/ddXk7RZqA4D6afXd8"><i class="fa-solid fa-location-dot"></i></a>
             <a href="qrverify.html"><i class="fa-solid fa-qrcode"></i></a>
             <a href="tel:+91 9748437602"><i class="fas fa-phone"></i></a>
-            <a href="qr-generator.html"><i class="fa-solid fa-qrcode"></i></a
+            <a href="qr-generator.html"><i class="fa-solid fa-app"></i></a
         </div>
     </footer>
 
