--- a/qr-generator.html
+++ b/qr-generator.html
@@ -35,8 +35,8 @@
                 
                 <div class="qr-generator-form">
                     <div class="form-group">
-                        <label for="agentCode">Agent Code:</label>
-                        <input type="text" id="agentCode" placeholder="Enter agent code (numbers only)" class="qr-input">
+                        <label for="Enter Link & Tezt">Agent Code:</label>
+                        <input type="text" id="agentCode" placeholder="Enter agent code " class="qr-input">
                     </div>
                     </div>
                     
