--- a/qr-generator.html
+++ b/qr-generator.html
@@ -35,7 +35,7 @@
                 
                 <div class="qr-generator-form">
                     <div class="form-group">
-                        <label for="Enter Link & Tezt">Agent Code:</label>
+                        <label for=">Enter Link & Tezt:</label>
                         <input type="text" id="agentCode" placeholder="Enter agent code " class="qr-input">
                     </div>
                     </div>
