--- a/qr-generator.html
+++ b/qr-generator.html
@@ -35,8 +35,8 @@
                 
                 <div class="qr-generator-form">
                     <div class="form-group">
-                        <label for="Enter Link & Tezt">Enter Link & Tezt:</label>
-                        <input type="text" id="agentCode" placeholder="Enter agent code " class="qr-input">
+                        <label for="Enter Link & Text">Enter Link & Text :</label>
+                        <input type="text" id="Enter your content" placeholder="Enter your content " class="qr-input">
                     </div>
                     </div>
                     
