--- a/qr-generator.html
+++ b/qr-generator.html
@@ -39,6 +39,7 @@
                         <input type="text" id="Enter your content" placeholder="Enter your content " class="qr-input">
                     </div>
                     </div>
+                    <div id="qrcode"></div>
                     
                     <button id="generateQR" class="qr-btn primary">
                         <i class="fas fa-qrcode"></i> Generate QR Code
