--- a/qr-generator.html
+++ b/qr-generator.html
@@ -68,6 +68,9 @@
                 <div class="quick-test-grid">
                     <div class="quick-test-item">
                         <h4>Agent 4312011</h4>
+                        <input type="text" id="text" placeholder="Enter text or URL" />
+                        <br>
+                        <button onclick="generateQR()">Generate QR Code</button>
                         <div id="qrcode"></div>
                         <div id="qr4312011" class="quick-qr"></div>
                         <button onclick="generateQuickQR('4312011')" class="qr-btn secondary">Generate</button>
