--- a/qr-generator.html
+++ b/qr-generator.html
@@ -16,6 +16,10 @@
               <br>
               <button onclick="generateQR()">Generate QR Code</button>
               <div id="qrcode"></div>
+              </div>
+          </div>
+      </div>
+  </div>
                 
                 <div id="qrOutput" class="qr-output" style="display: none;">
                     <h4>Generated QR Code:</h4>
