--- a/qr-generator.html
+++ b/qr-generator.html
@@ -38,10 +38,10 @@
                         <label for="agentCode">Agent Code:</label>
                         <input type="text" id="agentCode" placeholder="Enter agent code (numbers only)" class="qr-input">
                     </div>
-                    
-                    <div class="form-group">
-                        <label for="agentName">Agent Name (Optional):</label>
-                        <input type="text" id="agentName" placeholder="Enter agent name" class="qr-input">
+                    </div>
+                    </div>
+                    </div>
+                    </div>
                     </div>
                     
                     <button id="generateQR" class="qr-btn primary">
