--- a/qr-generator.html
+++ b/qr-generator.html
@@ -37,10 +37,58 @@
                     <div class="form-group">
                         <label for="agentCode">Agent Code:</label>
                         
-                    <input type="text" id="text" placeholder="Enter text or URL" />
-                    <br>
-                    <button onclick="generateQR()">Generate QR Code</button>
-                    <div id="qrcode"></div>
+                    <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>QR Code Generator</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 50px;
+    }
+    #qrcode {
+      margin-top: 20px;
+    }
+    input {
+      padding: 10px;
+      width: 300px;
+      font-size: 16px;
+    }
+    button {
+      padding: 10px 20px;
+      font-size: 16px;
+      margin-top: 10px;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>QR Code Generator</h1>
+
+  <input type="text" id="text" placeholder="Enter text or URL" />
+  <br>
+  <button onclick="generateQR()">Generate QR Code</button>
+
+  <div id="qrcode"></div>
+
+  <script>
+    function generateQR() {
+      const text = document.getElementById("text").value;
+      document.getElementById("qrcode").innerHTML = ""; // clear old QR
+      new QRCode(document.getElementById("qrcode"), {
+        text: text,
+        width: 200,
+        height: 200
+      });
+    }
+  </script>
+
+</body>
+</html>
+
                 </div>
 
 
