--- a/qr-generator.html
+++ b/qr-generator.html
@@ -28,7 +28,7 @@
 
     <!-- Main Content -->
     <main class="qr-main">
-        <div <label for="agentCode">Agent Code:</label>
+        <div class="qr-container">
             <div class="qr-section">
                 <h3><i class="fas fa-cog"></i> Generate Test QR Codes</h3>
                 <p
