--- a/qr-generator.html
+++ b/qr-generator.html
@@ -31,12 +31,17 @@
         <div class="qr-container">
             <div class="qr-section">
                 <h3><i class="fas fa-cog"></i> Generate Test QR Codes</h3>
-                <p
+                <p>Create QR codes for testing the verification system.</p>
+                
+                <div class="qr-generator-form">
+                    <div class="form-group">
+                        <label for="agentCode">Agent Code:</label>
                         
                     <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <title>QR Code Generator</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
   <style>
     body {
