--- a/qr-generator.html
+++ b/qr-generator.html
@@ -22,7 +22,7 @@
             <a href="index.html" class="back-btn">
                 <i class="fas fa-arrow-left"></i> Back to Portal
             </a>
-            <h1><i class="fas fa-qrcode"></i> QR Code Generator</h1>
+            <h1><i class="fas fa-qrcode"></i> QR Code Generator
         </div>
     </header>
 
