--- a/qr-generator.html
+++ b/qr-generator.html
@@ -29,8 +29,8 @@
     <main class="qr-main">
         <div class="qr-container">
             <div class="qr-section">
-                <h3><i class="fas fa-cog"></i> Generate Test QR Codes</h3>
-                <p>Create QR codes for testing the verification system.</p>
+                <h3><i class="fas fa-cog"></i>()</h3>
+                <p>Create QR codes for the verification system.</p>
                 
                 <div class="qr-generator-form">
                     <div class="form-group">
@@ -40,7 +40,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>QR Code Generator</title>
+  <title>()</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
   <style>
     body {
@@ -67,7 +67,7 @@
 
   <h1>QR Code Generator</h1>
 
-  <input type="text" id="text" placeholder="Enter text or URL" />
+  <input type="text" id="text" placeholder="Enter text or URL"/>
   <br>
   <button onclick="generateQR()">Generate QR Code</button>
 
