--- a/qr-generator.html
+++ b/qr-generator.html
@@ -29,7 +29,7 @@
     <main class="qr-main">
         <div class="qr-container">
             <div class="qr-section">
-                <h3><i class="fas fa-cog"></i>()</h3>
+                <h3><i class="fas fa-cog"></i>QR Code Generator</h3>
                 <p>Create QR codes for the verification system.</p>
                 
                 <div class="qr-generator-form">
@@ -65,7 +65,7 @@
 </head>
 <body>
 
-  <h1>QR Code Generator</h1>
+  <h1></h1>
 
   <input type="text" id="text" placeholder="Enter text or URL"/>
   <br>
