--- a/qr-generator.html
+++ b/qr-generator.html
@@ -34,7 +34,7 @@
                 
                 <div class="qr-generator-form">
                     <div class="form-group">
-                        <label for="agentCode">Agent Code:</label>
+                        <label for="enterlinkorurl">Enter Link or URL:</label>
                         
                     <!DOCTYPE html>
 <html lang="en">
