--- a/qr-generator.html
+++ b/qr-generator.html
@@ -69,7 +69,13 @@
 
   <input type="text" id="text" placeholder="Enter text or URL"/>
   <br>
-  <button onclick="generateQR()">Generate QR Code</button>
+  </div>
+                    <button id="downloadQR" class="qr-btn secondary">
+                        <i class="fas fa-download"></i> Download QR Code
+                    </button>
+                </div>
+            </div>
+        </div>
 
   <div id="qrcode"></div>
 
