--- a/qr-generator.html
+++ b/qr-generator.html
@@ -69,7 +69,8 @@
 
   <input type="text" id="text" placeholder="Enter text or URL"/>
   <br>
-  </div>
+  <button onclick="generateQR()">Generate QR Code</button>
+                    </div>
                     <button id="downloadQR" class="qr-btn secondary">
                         <i class="fas fa-download"></i> Download QR Code
                     </button>
@@ -85,8 +86,8 @@
       document.getElementById("qrcode").innerHTML = ""; // clear old QR
       new QRCode(document.getElementById("qrcode"), {
         text: text,
-        width: 250,
-        height: 150
+        width: 200,
+        height: 200
       });
     }
   </script>
