--- a/qr-generator.html
+++ b/qr-generator.html
@@ -67,18 +67,28 @@
 
   <h1></h1>
 
-           <input type="text" id="text" placeholder="Enter text or URL"/>
+  <input type="text" id="text" placeholder="Enter text or URL"/>
           <br>
          <button onclick="generateQR()">Generate QR Code</button>
 
-       <div id="qrcode"></div>
+       <button id="generateQR" class="qr-btn primary">
+                        <i class="fas fa-qrcode"></i> Generate QR Code
+                    </button>
+                </div>
+                
+                <div id="qrOutput" class="qr-output" style="display: none;">
+                    <h4>Generated QR Code:</h4>
+                    <div id="qrCode" class="qr-code-display"></div>
+                    <div class="qr-data-display">
+                        <h5>QR Code Data:</h5>
+                        <pre id="qrData" class="qr-data"></pre>
                     </div>
                     <button id="downloadQR" class="qr-btn secondary">
                         <i class="fas fa-download"></i> Download QR Code
-                      </button>
-                  </div>
-              </div>
-          </div>
+                    </button>
+                </div>
+            </div>
+        </div>
 
   <script>
     function generateQR() {
