--- a/qr-generator.html
+++ b/qr-generator.html
@@ -192,7 +192,8 @@
                 if (canvas) {
                     const link = document.createElement('a');
                     link.download = 'agent-qr-code.png';
-                    link.href = canvas.toDataURL();
+                    link.href = canvas.toDataURL<canvas aria-label="Generated QR Code"></canvas>
+;
                     link.click();
                 }
             };
