--- a/qr-generator.html
+++ b/qr-generator.html
@@ -1,6 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>QR Code Verification | GPay Business</title>
+    <link rel="icon" type="image/png" href="images/gpayBlogo.png">
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="QR Code Verification">
+    <meta property="og:description" content="GPay Business QR Code Verification">
+    <meta property="og:image" content="images/gpayBlogo.png">
+    <meta property="og:type" content="website">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/qr-styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+</head>
+
+<body>
+    <!-- Header -->
+    <header class="qr-header">
+        <div class="header-content">
+            <a href="index.html" class="back-btn">
+                <i class="fas fa-arrow-left"></i> Back to Portal
+            </a>
+            <h1><i class="fas fa-qrcode"></i> QR Code Verification</h1>
+        </div>
+    </header>
+
+    <!-- Main Content -->
+    <main class="qr-main">
+        <div class="qr-container">
+            <div class="qr-section">
+                <div class="qr-tabs">
+                    <button class="qr-tab active" data-tab="scanner">
+                        <i class="fas fa-camera"></i> Camera Scanner
+                    </button>
+                    <button class="qr-tab" data-tab="manual">
+                        <i class="fas fa-keyboard"></i> Manual Input
+                    </button>
+                </div>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
   <meta charset="UTF-8">
   <title>Employee Verification QR Generator</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
