--- a/qr-generator.html
+++ b/qr-generator.html
@@ -1,45 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QR Code Verification | GPay Business</title>
-    <link rel="icon" type="image/png" href="images/gpayBlogo.png">
-    <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="QR Code Verification">
-    <meta property="og:description" content="GPay Business QR Code Verification">
-    <meta property="og:image" content="images/gpayBlogo.png">
-    <meta property="og:type" content="website">
+<!-- Back to Portal Button -->
+<a href="index.html" class="back-to-portal">
+  ← Back to Portal
+</a>
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/qr-styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-</head>
+<!-- Styling -->
+<style>
+  .back-to-portal {
+    display: inline-block;
+    padding: 10px 16px;
+    background-color: #4f46e5;
+    color: white;
+    text-decoration: none;
+    border-radius: 8px;
+    font-weight: bold;
+    font-family: Arial, sans-serif;
+    transition: background 0.3s;
+  }
 
-<body>
-    <!-- Header -->
-    <header class="qr-header">
-        <div class="header-content">
-            <a href="index.html" class="back-btn">
-                <i class="fas fa-arrow-left"></i> Back to Portal
-            </a>
-            <h1><i class="fas fa-qrcode"></i> QR Code Verification</h1>
-        </div>
-    </header>
-
-    <!-- Main Content -->
-    <main class="qr-main">
-        <div class="qr-container">
-            <div class="qr-section">
-                <div class="qr-tabs">
-                    <button class="qr-tab active" data-tab="scanner">
-                        <i class="fas fa-camera"></i> Camera Scanner
-                    </button>
-                    <button class="qr-tab" data-tab="manual">
-                        <i class="fas fa-keyboard"></i> Manual Input
-                    </button>
-                </div>
+  .back-to-portal:hover {
+    background-color: #3730a3;
+  }
+</style>
 
 <!DOCTYPE html>
 <html lang="en">
