--- a/qr-generator.html
+++ b/qr-generator.html
@@ -1,4 +1,14 @@
-<!-- Back to Portal Button -->
+<style>
+  .custom-border {
+    border: 2px solid #222;
+    padding: 20px;
+    border-radius: 6px;
+    background: #f9f9f9;
+  }
+</style>
+
+<div class="custom-border">
+  <!-- Back to Portal Button -->
 <a href="index.html" class="back-to-portal">
   ← Back to Portal
 </a>
@@ -21,6 +31,8 @@
     background-color: #3730a3;
   }
 </style>
+
+</div>
 
 <!DOCTYPE html>
 <html lang="en">
