--- a/qr-generator.html
+++ b/qr-generator.html
@@ -1,40 +1,18 @@
 <style>
-  .custom-border {
-    border: 2px solid #222;
-    padding: 20px;
-    border-radius: 6px;
-    background: #f9f9f9;
+  .custom-box {
+    border: 2px solid #4f46e5;
+    padding: 25px;
+    width: 320px;
+    border-radius: 10px;
+    background-color: #f9f9f9;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    font-family: sans-serif;
   }
 </style>
 
-<div class="custom-border">
-  <!-- Back to Portal Button -->
-<a href="index.html" class="back-to-portal">
-  ← Back to Portal
-</a>
-
-<!-- Styling -->
-<style>
-  .back-to-portal {
-    display: inline-block;
-    padding: 10px 16px;
-    background-color: #4f46e5;
-    color: white;
-    text-decoration: none;
-    border-radius: 8px;
-    font-weight: bold;
-    font-family: Arial, sans-serif;
-    transition: background 0.3s;
-  }
-
-  .back-to-portal:hover {
-    background-color: #3730a3;
-  }
-</style>
-
-</div>
-
-<!DOCTYPE html>
+<div class="custom-box">
+  <h4>Reusable Box</h4>
+  <p><!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -150,3 +128,5 @@
 
 </body>
 </html>
+.</p>
+</div>
