--- a/qr-generator.html
+++ b/qr-generator.html
@@ -11,7 +11,7 @@
 </style>
 
 <div class="custom-box">
-  <h4>Reusable Box</h4>
+  <h4>Create QR Code For Free</h4>
   <p><!DOCTYPE html>
 <html lang="en">
 <head>
