--- a/qr-generator.html
+++ b/qr-generator.html
@@ -1,3 +1,27 @@
+<!-- Back to Portal Button -->
+<a href="index.html" class="back-to-portal">
+  ← Back to Portal
+</a>
+
+<!-- Styling -->
+<style>
+  .back-to-portal {
+    display: inline-block;
+    padding: 10px 16px;
+    background-color: #4f46e5;
+    color: white;
+    text-decoration: none;
+    border-radius: 8px;
+    font-weight: bold;
+    font-family: Arial, sans-serif;
+    transition: background 0.3s;
+  }
+
+  .back-to-portal:hover {
+    background-color: #3730a3;
+  }
+</style>
+
 <style>
   .custom-box {
     border: 2px solid #4f46e5;
