--- a/qr-generator.html
+++ b/qr-generator.html
@@ -1,4 +1,4 @@
-<!-- Back to Portal Button -->
+<p><!-- Back to Portal Button -->
 <a href="index.html" class="back-to-portal">
   ← Back to Portal
 </a>
