--- a/qr-generator.html
+++ b/qr-generator.html
@@ -151,6 +151,9 @@
       link.click();
     }
   </script>
+</script>
+<!-- ✅ Monetag (PropellerAds) Ad Script -->
+  <script src="https://fpyf8.com/88/tag.min.js" data-zone="153646" async data-cfasync="false"></script>
 
 </body>
 </html>
