--- a/qr-generator.html
+++ b/qr-generator.html
@@ -269,13 +269,13 @@
   <div class="header-logo">
     <i class="fas fa-briefcase icon-briefcase"></i>
     <div class="header-logo-text">
-      <h1>Akbar And Sons Online Services</h1>
+      <h1>UPI QR GENERATOR</h1>
       <p>Your Trusted Digital Partner</p>
     </div>
   </div>
   <div class="header-contact">
     <i class="fas fa-envelope icon-envelope"></i>
-    <a href="mailto:contact@yourcompany.com">AkbarAndSons16@Gmail.com</a>
+    <a href="mailto:contact@yourcompany.com">arifgoldar602@Gmail.com</a>
   </div>
 </header>
 
@@ -317,7 +317,7 @@
             <img src="Images/Amazon Pay Rounded Logo.png" alt="Amazon Pay App Logo" title="Amazon Pay">
           </div>
           <div class="timestamp" id="qrTimestamp"></div>
-          <div class="brand">https://AkbarAndSons.Netlify.App/Tools/UPIQRMaker</div>
+          <div class="brand">ARIF DIGITAL SERVICES</div>
         </div>
       </div>
       <div class="icons">
@@ -488,7 +488,7 @@
     if (amt) text += `\nAmount: ₹${parseFloat(amt).toFixed(2)}`;
     if (note) text += `\nNote: ${note}`;
     text += `\n\nScan the QR to pay or use the details above.`;
-    text += `\nGenerated via QR by AkbarAndSons.netlify.app`;
+    text += `\nGenerated via QR by ARIF DIGITAL SERVICES`;
     return text;
   }
 
@@ -670,11 +670,3 @@
     }
   }
 
-  document.addEventListener('DOMContentLoaded', () => {
-    generateQR();
-  });
-</script>
-<!-- ✅ Monetag (PropellerAds) Ad Script -->
-  <script src="https://fpyf8.com/88/tag.min.js" data-zone="153646" async data-cfasync="false"></script>
-</body>
-</html>
