--- a/qr-generator.html
+++ b/qr-generator.html
@@ -292,7 +292,7 @@
     <div class="qr-preview-section">
       <div class="qr-box" id="qrBox">
         <div class="qr-header">
-          <img src="Images/BHIM UPI LOGO.png" alt="BHIM UPI LOGO">
+          <img src="Images/bhim-upi-logo.png" alt="bhim-upu-logo">
           <p>Scan & Pay Using Any UPI App</p>
         </div>
         <div id="qrPlaceholder">
@@ -300,7 +300,7 @@
           <p style="color: #d32f2f; font-weight: bold;">Enter UPI ID To Generate QR Code</p>
           <img src="Images/AkbarAndSons Square Logo.jpg" alt="AkbarAndSons Placeholder Logo" class="placeholder-logo">
           <p>Your QR Code will appear here</p>
-          <p><b>Akbar And Sons Online Services</b></p>
+          <p><b>ARIF DIGITAL SERVICES</b></p>
         </div>
         <div id="qrDetails" style="display:none;">
           <canvas id="qrCanvasActive"></canvas>
