--- a/qr-generator.html
+++ b/qr-generator.html
@@ -331,12 +331,12 @@
 
 <footer class="app-footer">
   <div class="social-icons">
-    <a href="https://facebook.com/AkbarAndSonsOfficial" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+    <a href="https://www.facebook.com/share/1BnALhb5Te/"><i class="fab fa-facebook-f"></i></a>
     <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
     <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
     <a href="#" aria-label="RSS Feed"><i class="fas fa-rss"></i></a>
   </div>
-  <p class="footer-copyright">&copy; 2025 Akbar And Sons Online Services. All Rights Reserved.</p>
+  <p class="footer-copyright">&copy; 2025 Arif Digital Services. All Rights Reserved.</p>
 </footer>
 
 <script>
@@ -521,7 +521,7 @@
         });
         console.log("Download QR: html2canvas successful.");
         const upiId = document.getElementById('upi').value.trim().split('@')[0] || 'UPI-QR';
-        const fileName = `${upiId}_AkbarAndSons_QR.png`;
+        const fileName = `${upiId}_arifdigitalservices_QR.png`;
 
         const dataURL = canvas.toDataURL('image/png');
         const link = document.createElement('a');
@@ -581,7 +581,7 @@
 
     const shareText = getShareDetailsText();
     const upiId = document.getElementById('upi').value.trim().split('@')[0] || 'UPI-QR';
-    const fileName = `${upiId}_AkbarAndSons_QR.png`;
+    const fileName = `${upiId}_arifdigitalservices_QR.png`;
     let finalButtonMessage = originalTitle; 
 
     try {
