--- a/qr-generator.html
+++ b/qr-generator.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<a href="index.html" style="
+  display: inline-block;
+  padding: 12px 24px;
+  background-color: #1e40af;
+  color: #ffffff;
+  text-decoration: none;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  transition: background-color 0.3s ease, transform 0.2s ease;
+">
+  🔙 Back to Portal
+</a>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Create FREE UPI QR</title>
