--- a/qr-generator.html
+++ b/qr-generator.html
@@ -670,7 +670,16 @@
         }
     }
   }
-
+<!-- Footer Section -->
+    <footer class="footer">
+        Want To Become A Google Pay Agent?
+        <p><a href="https://forms.gle/T31TnWsennKkV8YS8">Apply Now</a></p>
+        <div class="social-icons">
+            <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.nbu.paisa.merchant&hl=en_IN"><i class="fa-brands fa-google-pay"></i></a>
+            <a href="https://maps.app.goo.gl/ddXk7RZqA4D6afXd8"><i class="fa-solid fa-location-dot"></i></a>
+            <a href="index.html"><i class="fa-solid fa-home"></i></a>
+        </div>
+    </footer>
   document.addEventListener('DOMContentLoaded', () => {
     generateQR();
   });
