--- a/qr-generator.html
+++ b/qr-generator.html
@@ -145,6 +145,8 @@
       const canvas = document.querySelector("#qrcode canvas");
       if (!canvas) return;
 
+       <a href="qr-generator-upi.html"><i class="fa-solid fa-qrcode"></i></a
+
       const link = document.createElement("a");
       link.download = "qr-code.png";
       link.href = canvas.toDataURL("image/png");
