--- a/qr-generator.html
+++ b/qr-generator.html
@@ -144,8 +144,14 @@
     function downloadQRCode() {
       const canvas = document.querySelector("#qrcode canvas");
       if (!canvas) return;
+       <div class="social-icons">
+            <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.nbu.paisa.merchant&hl=en_IN"><i class="fa-brands fa-google-pay"></i></a>
+            <a href="https://maps.app.goo.gl/ddXk7RZqA4D6afXd8"><i class="fa-solid fa-location-dot"></i></a>
+            <a href="qrverify.html"><i class="fa-solid fa-qrcode"></i></a>
+            <a href="tel:+91 9748437602"><i class="fas fa-phone"></i></a>
+            <a href="qr-generator-upi.html"><i class="fa-solid fa-qrcode"></i></a
+        </div>
 
-       <a href="qr-generator-upi.html"><i class="fa-solid fa-qrcode"></i></a
 
       const link = document.createElement("a");
       link.download = "qr-code.png";
