--- a/qr-generator.html
+++ b/qr-generator.html
@@ -144,14 +144,6 @@
     function downloadQRCode() {
       const canvas = document.querySelector("#qrcode canvas");
       if (!canvas) return;
-       <div class="social-icons">
-            <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.nbu.paisa.merchant&hl=en_IN"><i class="fa-brands fa-google-pay"></i></a>
-            <a href="https://maps.app.goo.gl/ddXk7RZqA4D6afXd8"><i class="fa-solid fa-location-dot"></i></a>
-            <a href="qrverify.html"><i class="fa-solid fa-qrcode"></i></a>
-            <a href="tel:+91 9748437602"><i class="fas fa-phone"></i></a>
-            <a href="qr-generator-upi.html"><i class="fa-solid fa-qrcode"></i></a
-        </div>
-
 
       const link = document.createElement("a");
       link.download = "qr-code.png";
@@ -164,3 +156,18 @@
 </html>
 .</p>
 </div>
+ <!-- Footer Section -->
+    <footer class="footer">
+        Want To Become A Google Pay Agent?
+        <p><a href="https://forms.gle/T31TnWsennKkV8YS8">Apply Now</a></p>
+        <div class="social-icons">
+            <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.nbu.paisa.merchant&hl=en_IN"><i class="fa-brands fa-google-pay"></i></a>
+            <a href="https://maps.app.goo.gl/ddXk7RZqA4D6afXd8"><i class="fa-solid fa-location-dot"></i></a>
+            <a href="qrverify.html"><i class="fa-solid fa-qrcode"></i></a>
+            <a href="tel:+91 9748437602"><i class="fas fa-phone"></i></a>
+            <a href="qr-generator.html"><i class="fa-solid fa-qrcode"></i></a
+        </div>
+    </footer>
+
+    <!-- JavaScript -->
+    <script src="js/script.js"></script>
