--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -332,7 +332,7 @@
 
 <footer class="app-footer">
   <div class="social-icons">
-    <a href="https://www.facebook.com/share/1BnALhb5Te/"><i class="fab fa-facebook-f"></i></a>
+    <a href="https://facebook.com/AkbarAndSonsOfficial" aria-label="Facebook/"><i class="fab fa-facebook-f"></i></a>
     <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
     <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
     <a href="#" aria-label="RSS Feed"><i class="fas fa-rss"></i></a>
