--- a/qr-generator.html
+++ b/qr-generator.html
@@ -151,6 +151,7 @@
       link.click();
     }
   </script>
+   <meta name="monetag" content="7d092ca78e8e3c9b64e83d0b06a0def9">
 
 </body>
 </html>
