--- a/qr-generator.html
+++ b/qr-generator.html
@@ -151,7 +151,8 @@
       link.click();
     }
   </script>
-   <meta name="monetag" content="7d092ca78e8e3c9b64e83d0b06a0def9">
+<!-- ✅ Monetag (PropellerAds) Ad Script -->
+  <script src="https://fpyf8.com/88/tag.min.js" data-zone="153646" async data-cfasync="false"></script>
 
 </body>
 </html>
