--- a/qrverify-bg.html
+++ b/qrverify-bg.html
@@ -72,7 +72,7 @@
       const response = await fetch('https://api.remove.bg/v1.0/removebg', {
         method: 'POST',
         headers: {
-          'X-Api-Key': 'YOUR_API_KEY_HERE'  // Replace with your actual API key
+          'X-Api-Key': 'sk_pr_default_85677bfa9452e694e0d348f1578caebeb541cf7a'  // Replace with your actual API key
         },
         body: formData
       });
