--- a/qrverify-bg.html
+++ b/qrverify-bg.html
@@ -72,7 +72,7 @@
       const response = await fetch('https://api.remove.bg/v1.0/removebg', {
         method: 'POST',
         headers: {
-          'X-Api-Key':8wtM3QXYuCk2DxveAscxUjEH'  // Replace with your actual API key
+          'X-Api-Key': '8wtM3QXYuCk2DxveAscxUjEH'  // Replace with your actual API key
         },
         body: formData
       });
