--- a/qr-generator.html
+++ b/qr-generator.html
@@ -150,7 +150,13 @@
       link.href = canvas.toDataURL("image/png");
       link.click();
     }
-
+<script 
+      type="text/javascript"
+      src="https://d3mkw6s8thqya7.cloudfront.net/integration-plugin.js"
+      id="aisensy-wa-widget"
+      widget-id="aaa2se"
+    >
+    </script>
 </body>
 </html>
 .</p>
