--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Create FREE UPI QR</title>
@@ -270,13 +269,13 @@
   <div class="header-logo">
     <i class="fas fa-briefcase icon-briefcase"></i>
     <div class="header-logo-text">
-      <h1>UPI QR GENERATOR</h1>
+      <h1>Akbar And Sons Online Services</h1>
       <p>Your Trusted Digital Partner</p>
     </div>
   </div>
   <div class="header-contact">
     <i class="fas fa-envelope icon-envelope"></i>
-    <a href="mailto:contact@yourcompany.com">arifgoldar602@Gmail.com</a>
+    <a href="mailto:contact@yourcompany.com">AkbarAndSons16@Gmail.com</a>
   </div>
 </header>
 
@@ -293,7 +292,7 @@
     <div class="qr-preview-section">
       <div class="qr-box" id="qrBox">
         <div class="qr-header">
-          <img src="Images/bhim-upi-logo.png" alt="bhim-upi-logo">
+          <img src="Images/BHIM UPI LOGO.png" alt="BHIM UPI Logo">
           <p>Scan & Pay Using Any UPI App</p>
         </div>
         <div id="qrPlaceholder">
@@ -301,7 +300,7 @@
           <p style="color: #d32f2f; font-weight: bold;">Enter UPI ID To Generate QR Code</p>
           <img src="Images/AkbarAndSons Square Logo.jpg" alt="AkbarAndSons Placeholder Logo" class="placeholder-logo">
           <p>Your QR Code will appear here</p>
-          <p><b>ARIF DIGITAL SERVICES</b></p>
+          <p><b>Akbar And Sons Online Services</b></p>
         </div>
         <div id="qrDetails" style="display:none;">
           <canvas id="qrCanvasActive"></canvas>
@@ -318,7 +317,7 @@
             <img src="Images/Amazon Pay Rounded Logo.png" alt="Amazon Pay App Logo" title="Amazon Pay">
           </div>
           <div class="timestamp" id="qrTimestamp"></div>
-          <div class="brand">ARIF DIGITAL SERVICES</div>
+          <div class="brand">https://AkbarAndSons.Netlify.App/Tools/UPIQRMaker</div>
         </div>
       </div>
       <div class="icons">
@@ -332,12 +331,12 @@
 
 <footer class="app-footer">
   <div class="social-icons">
-    <a href="https://facebook.com/AkbarAndSonsOfficial" aria-label="Facebook/"><i class="fab fa-facebook-f"></i></a>
+    <a href="https://facebook.com/AkbarAndSonsOfficial" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
     <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
     <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
     <a href="#" aria-label="RSS Feed"><i class="fas fa-rss"></i></a>
   </div>
-  <p class="footer-copyright">&copy; 2025 Arif Digital Services. All Rights Reserved.</p>
+  <p class="footer-copyright">&copy; 2025 Akbar And Sons Online Services. All Rights Reserved.</p>
 </footer>
 
 <script>
@@ -489,7 +488,7 @@
     if (amt) text += `\nAmount: ₹${parseFloat(amt).toFixed(2)}`;
     if (note) text += `\nNote: ${note}`;
     text += `\n\nScan the QR to pay or use the details above.`;
-    text += `\nGenerated via QR by ARIF DIGITAL SERVICES`;
+    text += `\nGenerated via QR by AkbarAndSons.netlify.app`;
     return text;
   }
 
@@ -522,7 +521,7 @@
         });
         console.log("Download QR: html2canvas successful.");
         const upiId = document.getElementById('upi').value.trim().split('@')[0] || 'UPI-QR';
-        const fileName = `${upiId}_arifdigitalservices_QR.png`;
+        const fileName = `${upiId}_AkbarAndSons_QR.png`;
 
         const dataURL = canvas.toDataURL('image/png');
         const link = document.createElement('a');
@@ -582,7 +581,7 @@
 
     const shareText = getShareDetailsText();
     const upiId = document.getElementById('upi').value.trim().split('@')[0] || 'UPI-QR';
-    const fileName = `${upiId}_arifdigitalservices_QR.png`;
+    const fileName = `${upiId}_AkbarAndSons_QR.png`;
     let finalButtonMessage = originalTitle; 
 
     try {
@@ -675,13 +674,7 @@
     generateQR();
   });
 </script>
-<script 
-      type="text/javascript"
-      src="https://d3mkw6s8thqya7.cloudfront.net/integration-plugin.js"
-      id="aisensy-wa-widget"
-      widget-id="aaa2se"
-    >
-    </script>
-
+<!-- ✅ Monetag (PropellerAds) Ad Script -->
+  <script src="https://fpyf8.com/88/tag.min.js" data-zone="153646" async data-cfasync="false"></script>
 </body>
 </html>
