--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -310,14 +310,14 @@
         </div>
         <div class="qr-footer" id="qrFooter" style="display:none;">
           <div class="apps">
-            <img src="Images/BHIM Rounded Logo.png" alt="BHIM App Logo" title="BHIM">
+            <img src="Images/BHIM Rounded Logo.png" alt="BHIM-UPI-LOGO" title="BHIM">
             <img src="Images/Paytm Rounded Logo.png" alt="Paytm App Logo" title="Paytm">
             <img src="Images/GPay Rounded Logo.png" alt="Google Pay App Logo" title="Google Pay">
             <img src="Images/PhonePe Rounded Logo.png" alt="PhonePe App Logo" title="PhonePe">
             <img src="Images/Amazon Pay Rounded Logo.png" alt="Amazon Pay App Logo" title="Amazon Pay">
           </div>
           <div class="timestamp" id="qrTimestamp"></div>
-          <div class="brand">https://AkbarAndSons.Netlify.App/Tools/UPIQRMaker</div>
+          <div class="brand">DEVELOPMENT BY ARIF</div>
         </div>
       </div>
       <div class="icons">
@@ -336,7 +336,7 @@
     <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
     <a href="#" aria-label="RSS Feed"><i class="fas fa-rss"></i></a>
   </div>
-  <p class="footer-copyright">&copy; 2025 Akbar And Sons Online Services. All Rights Reserved.</p>
+  <p class="footer-copyright">&copy; 2025 Arif Digital Services. All Rights Reserved.</p>
 </footer>
 
 <script>
@@ -673,8 +673,5 @@
   document.addEventListener('DOMContentLoaded', () => {
     generateQR();
   });
-</script>
-<!-- ✅ Monetag (PropellerAds) Ad Script -->
-  <script src="https://fpyf8.com/88/tag.min.js" data-zone="153646" async data-cfasync="false"></script>
 </body>
 </html>
