--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -673,6 +673,8 @@
   document.addEventListener('DOMContentLoaded', () => {
     generateQR();
   });
-
+</script>
+<!-- ✅ Monetag (PropellerAds) Ad Script -->
+  <script src="https://fpyf8.com/88/tag.min.js" data-zone="153646" async data-cfasync="false"></script>
 </body>
 </html>
