--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -310,7 +310,7 @@
         </div>
         <div class="qr-footer" id="qrFooter" style="display:none;">
           <div class="apps">
-            <img src="Images/BHIM Rounded Logo.png" alt="BHIM App Logo" title="BHIM">
+            <img src="Images/BHIM Rounded Logo.png" alt="bhim-upi-logo" title="BHIM">
             <img src="Images/Paytm Rounded Logo.png" alt="Paytm App Logo" title="Paytm">
             <img src="Images/GPay Rounded Logo.png" alt="Google Pay App Logo" title="Google Pay">
             <img src="Images/PhonePe Rounded Logo.png" alt="PhonePe App Logo" title="PhonePe">
