--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -269,13 +269,13 @@
   <div class="header-logo">
     <i class="fas fa-briefcase icon-briefcase"></i>
     <div class="header-logo-text">
-      <h1>Akbar And Sons Online Services</h1>
+      <h1>UPI QR CODE GENERATOR</h1>
       <p>Your Trusted Digital Partner</p>
     </div>
   </div>
   <div class="header-contact">
     <i class="fas fa-envelope icon-envelope"></i>
-    <a href="mailto:contact@yourcompany.com">AkbarAndSons16@Gmail.com</a>
+    <a href="mailto:contact@yourcompany.com">arifgoldar602@gmail.com</a>
   </div>
 </header>
 
@@ -292,15 +292,15 @@
     <div class="qr-preview-section">
       <div class="qr-box" id="qrBox">
         <div class="qr-header">
-          <img src="Images/BHIM UPI LOGO.png" alt="BHIM UPI Logo">
+          <img src="Images/BHIM UPI LOGO.png" alt="bhim-upi-logo">
           <p>Scan & Pay Using Any UPI App</p>
         </div>
         <div id="qrPlaceholder">
           <canvas id="qrCanvas" style="display:none;"></canvas>
           <p style="color: #d32f2f; font-weight: bold;">Enter UPI ID To Generate QR Code</p>
-          <img src="Images/AkbarAndSons Square Logo.jpg" alt="AkbarAndSons Placeholder Logo" class="placeholder-logo">
+          <img src="Images/AkbarAndSons Square Logo.jpg" alt="Arif Digital Services QR Logo" class="placeholder-logo">
           <p>Your QR Code will appear here</p>
-          <p><b>Akbar And Sons Online Services</b></p>
+          <p><b>Arif Digital Services</b></p>
         </div>
         <div id="qrDetails" style="display:none;">
           <canvas id="qrCanvasActive"></canvas>
@@ -310,14 +310,14 @@
         </div>
         <div class="qr-footer" id="qrFooter" style="display:none;">
           <div class="apps">
-            <img src="Images/BHIM Rounded Logo.png" alt="bhim-upi-logo" title="BHIM">
+            <img src="Images/BHIM Rounded Logo.png" alt="Bhim App Logo" title="BHIM">
             <img src="Images/Paytm Rounded Logo.png" alt="Paytm App Logo" title="Paytm">
             <img src="Images/GPay Rounded Logo.png" alt="Google Pay App Logo" title="Google Pay">
             <img src="Images/PhonePe Rounded Logo.png" alt="PhonePe App Logo" title="PhonePe">
             <img src="Images/Amazon Pay Rounded Logo.png" alt="Amazon Pay App Logo" title="Amazon Pay">
           </div>
           <div class="timestamp" id="qrTimestamp"></div>
-          <div class="brand">https://AkbarAndSons.Netlify.App/Tools/UPIQRMaker</div>
+          <div class="brand">Arif Digital Services</div>
         </div>
       </div>
       <div class="icons">
@@ -336,7 +336,7 @@
     <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
     <a href="#" aria-label="RSS Feed"><i class="fas fa-rss"></i></a>
   </div>
-  <p class="footer-copyright">&copy; 2025 Akbar And Sons Online Services. All Rights Reserved.</p>
+  <p class="footer-copyright">&copy; 2025 Arif Digital Services. All Rights Reserved.</p>
 </footer>
 
 <script>
