--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -292,7 +292,7 @@
     <div class="qr-preview-section">
       <div class="qr-box" id="qrBox">
         <div class="qr-header">
-          <img src="Images/BHIM UPI LOGO.png" alt="bhim-upi-logo">
+          <img src="Images/BHIM UPI LOGO.png" alt="BHIM UPI Logo">
           <p>Scan & Pay Using Any UPI App</p>
         </div>
         <div id="qrPlaceholder">
