--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -298,7 +298,7 @@
         <div id="qrPlaceholder">
           <canvas id="qrCanvas" style="display:none;"></canvas>
           <p style="color: #d32f2f; font-weight: bold;">Enter UPI ID To Generate QR Code</p>
-          <img src="Images/AkbarAndSons Square Logo.jpg" alt="uniquelogodesing placeholder-logo" class="placeholder-logo">
+          <img src="Images/AkbarAndSons Square Logo.jpg" alt="uniquelogodesing" class="placeholder-logo">
           <p>Your QR Code will appear here</p>
           <p><b>Arif Digital Services</b></p>
         </div>
