--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -269,7 +269,7 @@
   <div class="header-logo">
     <i class="fas fa-briefcase icon-briefcase"></i>
     <div class="header-logo-text">
-      <h1>Akbar And Sons Online Services</h1>
+      <h1>Upi Qr Code Generator Portal For Free</h1>
       <p>Your Trusted Digital Partner</p>
     </div>
   </div>
