--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -331,7 +331,7 @@
 
 <footer class="app-footer">
   <div class="social-icons">
-    <a href="https://facebook.com/AkbarAndSonsOfficial" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+    <a href="https://www.facebook.com/share/14DyjrZ1qHW/" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
     <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
     <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
     <a href="#" aria-label="RSS Feed"><i class="fas fa-rss"></i></a>
@@ -581,7 +581,7 @@
 
     const shareText = getShareDetailsText();
     const upiId = document.getElementById('upi').value.trim().split('@')[0] || 'UPI-QR';
-    const fileName = `${upiId}_AkbarAndSons_QR.png`;
+    const fileName = `${upiId}_Bdl-Arif-Goldar_QR.png`;
     let finalButtonMessage = originalTitle; 
 
     try {
