--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -521,7 +521,7 @@
         });
         console.log("Download QR: html2canvas successful.");
         const upiId = document.getElementById('upi').value.trim().split('@')[0] || 'UPI-QR';
-        const fileName = `${upiId}_AkbarAndSons_QR.png`;
+        const fileName = `${upiId}_BDL_ARIF_GOLDAR_QR.png`;
 
         const dataURL = canvas.toDataURL('image/png');
         const link = document.createElement('a');
