--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -488,7 +488,7 @@
     if (amt) text += `\nAmount: ₹${parseFloat(amt).toFixed(2)}`;
     if (note) text += `\nNote: ${note}`;
     text += `\n\nScan the QR to pay or use the details above.`;
-    text += `\nGenerated via QR by AkbarAndSons.netlify.app`;
+    text += `\nGenerated via QR by Arif Digital Services`;
     return text;
   }
 
