--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -85,7 +85,7 @@
     .content-splitter {
       display: flex;
       flex-direction: column; /* Mobile first: stack columns */
-      gap: 15px; /* Gap between input section and QR section on mobile */
+      gap: 30px; /* Gap between input section and QR section on mobile */
     }
 
     .input-section input[type="text"] {
@@ -269,7 +269,7 @@
   <div class="header-logo">
     <i class="fas fa-briefcase icon-briefcase"></i>
     <div class="header-logo-text">
-      <h1>Upi Qr Code Generator Portal For Free</h1>
+      <h1>UPI QR GENERATOR            </h1>
       <p>Your Trusted Digital Partner</p>
     </div>
   </div>
