--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -275,7 +275,7 @@
   </div>
   <div class="header-contact">
     <i class="fas fa-envelope icon-envelope"></i>
-    <a href="mailto:contact@yourcompany.com">Not Avil</a>
+    <a href="mailto:contact@yourcompany.com"></a>
   </div>
 </header>
 
