--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -111,7 +111,7 @@
     }
     
     .qr-box {
-      border: 8px solid #4CAF50; /* Green border */
+      border: 8px solid blue; /* Green border */
       padding: 20px;
       margin: 0 auto 20px auto; /* Centered horizontally, 20px bottom margin */
       width: 100%; /* Take full width of parent, up to max-width */
