--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -20,7 +20,10 @@
   align-items: center;
   font-family: Arial;
 }
-</style>
+@keyframes gradientShift {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
 
 <h1>Animated Gradient Background</h1>
     }
