--- a/qr-generator.html
+++ b/qr-generator.html
@@ -156,33 +156,34 @@
 </html>
 .</p>
 </div>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Animated Background</title>
-  <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      background: linear-gradient(-45deg, #1e63a8, #4CAF50, #ff9800, #9c27b0);
-      background-size: 400% 400%;
-      animation: gradientShift 10s ease infinite;
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-family: Arial;
-    }
-    @keyframes gradientShift {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-  </style>
-</head>
-<body>
-  <h1></h1>
-</body>
-</html>
+<style>
+body {
+  margin: 0;
+  background: #0f2027;
+  overflow: hidden;
+}
+.bubble {
+  position: absolute;
+  bottom: -100px;
+  width: 40px;
+  height: 40px;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 50%;
+  animation: float 10s infinite ease-in;
+}
+@keyframes float {
+  0% {
+    transform: translateY(0) scale(1);
+  }
+  100% {
+    transform: translateY(-100vh) scale(1.5);
+  }
+}
+</style>
+
+<div class="bubble" style="left: 10%; animation-delay: 0s;"></div>
+<div class="bubble" style="left: 30%; animation-delay: 2s;"></div>
+<div class="bubble" style="left: 50%; animation-delay: 4s;"></div>
+<div class="bubble" style="left: 70%; animation-delay: 1s;"></div>
+<div class="bubble" style="left: 90%; animation-delay: 3s;"></div>
 
