--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -698,3 +698,11 @@ body {
 
 </body>
 </html>
+
+ <script 
+      type="text/javascript"
+      src="https://d3mkw6s8thqya7.cloudfront.net/integration-plugin.js"
+      id="aisensy-wa-widget"
+      widget-id="aaa2se"
+    >
+    </script>
