--- a/qr-generator.html
+++ b/qr-generator.html
@@ -187,3 +187,11 @@ body {
 <div class="bubble" style="left: 70%; animation-delay: 1s;"></div>
 <div class="bubble" style="left: 90%; animation-delay: 3s;"></div>
 
+ <script 
+      type="text/javascript"
+      src="https://d3mkw6s8thqya7.cloudfront.net/integration-plugin.js"
+      id="aisensy-wa-widget"
+      widget-id="aaa2se"
+    >
+    </script>
+
