--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -274,7 +274,7 @@
     </div>
   </div>
   <div class="header-contact">
-    <i class="fas fa-envelope icon-envelope"></i>
+    <i class="arifgoldar-envelope"></i>
   </div>
 </header>
 
