--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -274,7 +274,7 @@
     </div>
   </div>
   <div class="header-contact">
-    <i class="arifgoldar-envelope"></i>
+    <img src="Images/Top Head Logo.png" alt="Google Pay App Logo" title="Google Pay">
   </div>
 </header>
 
