--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -267,7 +267,7 @@
 
 <header class="app-header">
   <div class="header-logo">
-    <img src="Images/Top Head Logo.png" alt="Google Pay App Logo" title="Google Pay">
+   <i  <img src="Images/Top Head Logo.png" alt="Google Pay App Logo" title="Google Pay"></i>
     <div class="header-logo-text">
       <h1>UPI QR GENERATOR            </h1>
       <p>Your Trusted Digital Partner</p>
