--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -12,7 +12,7 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
       box-sizing: border-box;
-      background-color: #f4f7f6;
+      background-color: #blue;
       color: #333;
       overflow-x: hidden;
       display: flex;
