--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -295,7 +295,7 @@
         </div>
         <div id="qrPlaceholder">
           <canvas id="qrCanvas" style="display:none;"></canvas>
-          <p style="color: #blue; font-weight: bold;">Enter UPI ID To Generate QR Code</p>
+          <p style="color: #d32f2f; font-weight: bold;">Enter UPI ID To Generate QR Code</p>
           <img src="Images/Arif Placeholder Logo.jpg" alt="Arif Placeholder Logo" class="placeholder-logo">
           <p>Your QR Code will appear here</p>
           <p><b>Arif Digital Services</b></p>
